# sistema-autenticacion-flask

./: .env_ejemplo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  database_setup.py  demo_testing.py  pyproject.toml  pytest.ini  run_tests.py  test_plan.md
static/: flash-messages.js  styles.css
templates/: 404.html  index.html  login.html  registro.html  usuarios.html
tests/: __init__.py  conftest.py  test_auth.py  test_database.py  test_routes.py  test_security.py  test_ui.py
